--- a/2-4Tensor flow简单案例.ipynb
+++ b/2-4Tensor flow简单案例.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -23,10 +23,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [0.64478624, 0.4533502]\n",
-      "100 [0.13374838, 0.18140365]\n",
-      "200 [0.10366446, 0.19798078]\n",
-      "300 [0.10039791, 0.19978073]\n"
+      "0 [0.058602452, 0.10172062]\n",
+      "20 [0.10695654, 0.19596414]\n",
+      "40 [0.10414126, 0.19759746]\n",
+      "60 [0.102465294, 0.19856977]\n",
+      "80 [0.101467595, 0.19914858]\n",
+      "100 [0.10087366, 0.19949315]\n",
+      "120 [0.100520104, 0.19969825]\n",
+      "140 [0.10030963, 0.19982037]\n",
+      "160 [0.10018432, 0.19989307]\n",
+      "180 [0.10010973, 0.19993633]\n",
+      "200 [0.100065336, 0.1999621]\n"
      ]
     }
    ],
@@ -36,8 +43,8 @@
     "y_data = x_data*0.1+0.2\n",
     "\n",
     "#构造一个线性模型\n",
-    "b = tf.Variable(0.9)\n",
-    "k = tf.Variable(0.9)\n",
+    "b = tf.Variable(0.)\n",
+    "k = tf.Variable(0.)\n",
     "y = k*x_data + b\n",
     "\n",
     "#二次代价函数\n",
@@ -47,15 +54,14 @@
     "#最小化代价函数\n",
     "train = optimizer.minimize(loss)\n",
     "\n",
-    "#初始化变量\n",
     "init = tf.global_variables_initializer()\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "    for step in range(301):\n",
+    "    for _ in range(201):\n",
     "        sess.run(train)\n",
-    "        if step%100==0:\n",
-    "            print(step,sess.run([k,b]))"
+    "        if _%20==0:\n",
+    "            print(_, sess.run([k,b]))"
    ]
   },
   {
@@ -69,6 +75,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
